fix: align card title to the left

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -20,5 +20,6 @@
         position: absolute;
         bottom: 20px;
         left: 20px;
+        text-align: left;
     }
 }
